--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -248,18 +248,78 @@
         <a href="/about" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
       </div>
       <div class="fourth-section-grid" data-aos="fade-left" data-aos-duration="2000">
-          <%= image_tag 'food-icon.png' %>
-          <%= image_tag 'cosmetics-icon.png' %>
-          <%= image_tag 'extrusion-icon.png' %>
-          <%= image_tag 'automotive-icon.png' %>
-          <%= image_tag 'beverage-icon.png' %>
-          <%= image_tag 'pharma-icon.png' %>
-          <%= image_tag 'elec-icon.png' %>
-          <%= image_tag 'const-icon.png' %>
-          <%= image_tag 'package-icon.png' %>
-          <%= image_tag 'industry-icon.png' %>
-          <%= image_tag 'chem-icon.png' %>
-          <%= image_tag 'many-icon.png' %>
+          <div class="industries-card">
+            <div class="industries-card-image-container">
+              <%= image_tag 'food.png' %>
+            </div>
+            <p><%= t('home.food') %></p>
+          </div>
+          <div class="industries-card">
+            <div class="industries-card-image-container">
+              <%= image_tag 'cosmetics.png' %>
+            </div>
+            <p><%= t('home.cosmetics') %></p>
+          </div>
+          <div class="industries-card">
+            <div class="industries-card-image-container">
+              <%= image_tag 'extrusion.png' %>
+            </div>
+            <p><%= t('home.extrusion') %></p>
+          </div>
+          <div class="industries-card">
+            <div class="industries-card-image-container">
+              <%= image_tag 'automotive.png' %>
+            </div>
+            <p><%= t('home.automotive') %></p>
+          </div>
+          <div class="industries-card">
+            <div class="industries-card-image-container">
+              <%= image_tag 'beverage.png' %>
+            </div>
+            <p><%= t('home.beverage') %></p>
+          </div>
+          <div class="industries-card">
+            <div class="industries-card-image-container">
+              <%= image_tag 'pharmaceutical.png' %>
+            </div>
+            <p><%= t('home.pharmaceutical') %></p>
+          </div>
+          <div class="industries-card">
+            <div class="industries-card-image-container">
+              <%= image_tag 'electronics.png' %>
+            </div>
+            <p><%= t('home.electronics') %></p>
+          </div>
+          <div class="industries-card">
+            <div class="industries-card-image-container">
+              <%= image_tag 'construction.png' %>
+            </div>
+            <p><%= t('home.construction') %></p>
+          </div>
+          <div class="industries-card">
+            <div class="industries-card-image-container">
+              <%= image_tag 'packaging.png' %>
+            </div>
+            <p><%= t('home.packaging') %></p>
+          </div>
+          <div class="industries-card">
+            <div class="industries-card-image-container">
+              <%= image_tag 'industrial.png' %>
+            </div>
+            <p><%= t('home.industrial_parts') %></p>
+          </div>
+          <div class="industries-card">
+            <div class="industries-card-image-container">
+              <%= image_tag 'chemicals.png' %>
+            </div>
+            <p><%= t('home.chemicals') %></p>
+          </div>
+          <div class="industries-card">
+            <div class="industries-card-image-container">
+              <%= image_tag 'more.png' %>
+            </div>
+            <p><%= t('home.and_many_more') %></p>
+          </div>
         </div>
       </div>
     </div>
