--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -219,7 +219,7 @@
         <p class="responsive-text-small text-center mobile-margin-bottom"><%= t("software.fifth_section_text_one") %></p>
         <h2 class="text-center"><%= t("software.fifth_section_title_two") %></h2>
         <p class="responsive-text-small text-center"><%= t("software.fifth_section_text_two") %></p>
-        <%= cl_image_tag("software-graphic-11_c9knsk.png", :quality=>"auto", class: "software-middle-graphic") %>
+        <%= cl_image_tag("software-graphic-11_ip0jy4.png", class: "software-middle-graphic") %>
       </div>
     </div>
   </div>
