--- a/app/assets/stylesheets/pages/_software.scss
+++ b/app/assets/stylesheets/pages/_software.scss
@@ -290,11 +290,11 @@
 
 .software-middle-graphic {
   width: 60%;
-  margin-left: calc(50% - 35%);
-  padding-top: 50px;
+  // margin-left: calc(50% - 35%);
+  padding: 50px 0;
   @include for-phone-only {
     width: 100%;
-    margin: 0 0 0 56px;
+    // margin: 0 0 0 56px;
   }
 }
 
