--- a/app/views/pages/inks_and_consumables.html.erb
+++ b/app/views/pages/inks_and_consumables.html.erb
@@ -33,8 +33,8 @@
     <%= cl_image_tag("slant-background_xuvpqk.png", :quality=>"auto", class: "inks-slant hide-mobile") %>
     <%= cl_image_tag("mobile-slant_kd8uj1.png", :quality=>"auto", class: "inks-slant show-mobile") %>
     <div class="inks-section mobile-reverse">
-      <%= cl_image_tag("inks-pipes_vcplke.png", class: "fxone-first-section-image position-relative inks-third-section-image") %>
-      <div class="inks-third-section-right mobile-center">
+      <%= cl_image_tag("inks-pipes_nfyp2g.png", class: "fxone-first-section-image position-relative inks-third-section-image") %>
+      <div class="inks-third-section-right mobile-center" data-aos="fade-up" data-aos-duration="2000">
         <%= image_tag 'inks-icon-1.png', class: 'about-icon' %>
         <h3 class="inks-fifth-section-text mobile-margin-bottom"><%= t("inks_and_consumables.third_section_text") %></h3>
       </div>
