--- a/app/assets/stylesheets/pages/_job_show.scss
+++ b/app/assets/stylesheets/pages/_job_show.scss
@@ -64,6 +64,17 @@
   }
 }
 
+.job-social-links {
+  a {
+    text-decoration: none;
+    &:hover {
+      i {
+        color: #253446;
+      }
+    }
+  }
+}
+
 .trix-text {
   margin: 10px 0;
   div {
