--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -38,7 +38,7 @@
         </div>
         <div class="d-flex justify-content-center">
           <%= f.submit "Search", class: "btn temp-button" %>
-          <%= link_to 'Clear', jobs_path, class: 'btn temp-button' %>
+          <%= link_to 'Clear', jobs_path, class: 'btn reverse-temp-button' %>
         </div>
       <% end %>
       <p class="text-center grey main-body-text s-medium-text">
