--- a/app/assets/stylesheets/pages/_job_index.scss
+++ b/app/assets/stylesheets/pages/_job_index.scss
@@ -155,6 +155,14 @@
   margin: 10px 5px;
 }
 
+.reverse-temp-button {
+  width: 100px;
+  background-color: #FFF;
+  border-color: #f3a300;
+  color: #f3a300;
+  margin: 10px 5px;
+}
+
 .new-job-button {
   width: 100px;
   margin: 20px calc(50% - 50px);
