--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -226,7 +226,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 !important;
+  padding: 0 10px 0 0 !important;
+
   i {
     font-size: 12px;
   }
