--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -329,7 +329,7 @@
     width: 500px;
     height: auto;
     border-radius: 5px;
-    box-shadow: 0px 8px 10px rgba(149, 156, 169, 0.40), -1px -1px 10px rgba(156, 173, 198, 0.35);
+    box-shadow: 0 45px 63px rgba(0,0,0,0.1);
     z-index: 10;
   }
 
@@ -505,7 +505,7 @@
   border-radius: 0 8px 8px 0;
   background-image: url('https://images.unsplash.com/photo-1562887009-92ca32b341c6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80');
   background-size: cover;
-  box-shadow: 0px 8px 10px rgba(149, 156, 169, 0.20), -1px -1px 10px rgba(156, 173, 198, 0.20);
+  box-shadow: 0 45px 63px rgba(0,0,0,0.1);
   z-index: 10;
   display: flex;
   justify-content: center;
@@ -778,7 +778,7 @@
 }
 
 .industries-card {
-  box-shadow: 0px 8px 10px rgba(149, 156, 169, 0.20), -1px -1px 10px rgba(156, 173, 198, 0.20);
+  box-shadow: 0px 8px 30px rgba(149, 156, 169, 0.30), -1px -1px 30px rgba(156, 173, 198, 0.30);
   height: 200px;
   width: 160px;
   background: #FFF;
