--- a/app/assets/stylesheets/posts/_posts-index.scss
+++ b/app/assets/stylesheets/posts/_posts-index.scss
@@ -70,7 +70,7 @@
 
 .featured-post-div {
   border-radius: 5px;
-  box-shadow: 0px 8px 10px rgba(149, 156, 169, 0.20), -1px -1px 10px rgba(156, 173, 198, 0.20);
+  box-shadow: 0 15px 40px rgba(0,0,0,0.1);
   background-color: white;
   margin: 20px 0 100px 0;
   height: 400px;
