--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,7 +12,7 @@
       <div class="about-section mobile-column">
         <div class="about-second-section-left no-padding-mobile">
           <%= cl_image_tag("about-graphic-2_gcrekd.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
-          <%= image_tag 'about-dots.png', class: 'about-dots-section-two' %>
+          <%= image_tag 'square-dots.png', class: 'about-dots-section-two' %>
         </div>
         <div class="about-second-section-right mobile-center" data-aos="fade-up" data-aos-duration="2000">
           <%= image_tag 'about-icon-1.png', class: 'about-icon' %>
@@ -34,7 +34,7 @@
   <div class="about-fourth-section-wrapper" style="background-image: url('<%= cl_image_path("about-slanted-background_towjgo.png", :quality=>"auto") %>')">
     <%#= cl_image_tag("about-slanted-background_towjgo.png", :quality=>"auto", class: "about-graphic slanted-background") %>
     <%= cl_image_tag("about-graphic-3_y4zb6l.png", :quality=>"auto", class: "about-graphic-four") %>
-    <%= image_tag 'about-dots.png', class: 'about-dots about-dots-section-three' %>
+    <%= image_tag 'square-dots.png', class: 'about-dots about-dots-section-three' %>
     <div class="container">
       <div class="about-fourth">
         <div class="about-fourth-text-left">
@@ -47,10 +47,11 @@
       </div>
     </div>
     <div class="about-fifth-section-wrapper">
+      <%= image_tag 'square-dots.png', class: 'about-dots about-dots-section-four hide-mobile' %>
       <div class="container">
         <div class="about-section about-fifth-section no-padding-mobile">
           <div class="about-fifth-section-left" data-aos="fade-right" data-aos-duration="2000">
-            <%= cl_image_tag("about-graphic-4-with-dots_w2k2fb.png", :quality=>"auto", class: "about-graphic about-graphic-two hide-mobile") %>
+            <%= cl_image_tag("about-graphic-4_r5ic34.png", :quality=>"auto", class: "about-graphic about-graphic-two hide-mobile") %>
             <%#= image_tag 'about-dots.png', class: 'about-dots-fifth' %>
           </div>
           <div class="about-fifth-section-right mobile-center" data-aos="fade-up" data-aos-duration="2000">
