--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -9,7 +9,7 @@
     </div>
   </div>
   <div class="ownership-second-section-wrapper fxone-second-section-wrapper">
-    <%= image_tag 'about-dots.png', class: 'fxone-dots hide-mobile' %>
+    <%= image_tag 'square-dots.png', class: 'fxone-dots hide-mobile' %>
     <%= image_tag 'fxone-icon-1.png', class: 'about-icon' %>
     <h2 class="text-center"><%= t("fxone_remote.second_section_title") %></h2>
   </div>
@@ -251,7 +251,7 @@
     </div>
   </div>
   <div class="fxone-seventh-section-wrapper">
-    <%= image_tag 'about-dots.png', class: 'fxone-seventh-section-dots' %>
+    <%= image_tag 'square-dots.png', class: 'fxone-seventh-section-dots' %>
     <%= cl_image_tag("fourth-section-bottom-half_j9e2d7.png", :quality=>"auto", class: "fxone-fourth-section-background hide-mobile") %>
     <div class="container">
       <div class="about-section">
