--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -8,7 +8,7 @@
     <%= cl_image_tag("fxone-standard-graphic-1_wieclv.png", :quality=>"auto", class: "first-section-image") %>
   </div>
   <div class="ownership-second-section-wrapper fxone-second-section-wrapper" >
-    <%= image_tag 'about-dots.png', class: 'fxone-dots hide-mobile' %>
+    <%= image_tag 'square-dots.png', class: 'fxone-dots hide-mobile' %>
     <div data-aos="fade-up" data-aos-duration="2000">
       <%= image_tag 'fxone-icon-1.png', class: 'about-icon' %>
     </div>
@@ -258,7 +258,7 @@
     </div>
   </div>
   <div class="fxone-seventh-section-wrapper">
-    <%= image_tag 'about-dots.png', class: 'fxone-seventh-section-dots' %>
+    <%= image_tag 'square-dots.png', class: 'fxone-seventh-section-dots' %>
     <%= cl_image_tag("fourth-section-bottom-half_j9e2d7.png", :quality=>"auto", class: "fxone-fourth-section-background hide-mobile") %>
     <div class="container">
       <div class="about-section">
