--- a/app/views/pages/inks_and_consumables.html.erb
+++ b/app/views/pages/inks_and_consumables.html.erb
@@ -4,7 +4,7 @@
     <div class="first-section-text">
       <h1 class="w-100"><%= t("inks_and_consumables.first_section_text") %></h1>
     </div>
-    <%= cl_image_tag("inks_and_cons_tvzb0g.png", class: "first-section-image", style: "max-width: 700px;") %>
+    <%= cl_image_tag("inks-and-cons_wzglxn.png", class: "first-section-image", style: "max-width: 700px;") %>
   </div>
   <div class="inks-second-section-wrapper">
     <%= image_tag 'about-dots.png', class: 'inks-dots-mobile show-mobile' %>
@@ -19,7 +19,7 @@
           </div>
         </div>
         <div class="inks-first-section-right">
-          <%= image_tag 'about-dots.png', class: 'inks-dots hide-mobile' %>
+          <%= image_tag 'square-dots.png', class: 'inks-dots hide-mobile' %>
           <div class="inks-card pb-3" style="margin: 0 auto 0 0">
             <%= image_tag 'inks-card-icon-2.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header px-3"><%= t("inks_and_consumables.second_card_title") %></p>
