--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -13,7 +13,7 @@
           <p class="responsive-text-small p-0"><%= t("software.first_section_text_two") %></p>
         </div>
       </div>
-      <%= cl_image_tag("software-graphic-1_ayt9zv.png", class: "first-section-image hide-mobile") %>
+      <%= cl_image_tag("software-graphic-1_elwb7o.png", class: "first-section-image hide-mobile") %>
     </div>
   </div>
   <div class="software-second-section-wrapper">
@@ -162,7 +162,7 @@
       <div class="software-fourth-section-graphics-container">
         <%= cl_image_tag("software-graphic-6_x590cd.png", :quality=>"auto", class: "software-fourth-section-graphics") %>
         <%= cl_image_tag("software-graphic-7_cbcawg.png", :quality=>"auto", class: "software-fourth-section-graphics") %>
-        <%= cl_image_tag("grey-dots_oh4kpb.png", :quality=>"auto", class: "software-grey-dots hide-mobile") %>
+        <%= image_tag("square-grey-dots.png", class: "software-grey-dots hide-mobile") %>
       </div>
       <div class="software-fourth-section-text">
         <%= image_tag 'software-icon-3.png', class: 'about-icon' %>
