--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -72,12 +72,12 @@
             <% end %>
           </li>
           <li>
-            <%= link_to do %>
+            <%= link_to jobs_path do %>
               <%= image_tag 'icon-8.png' %><%= t("navbar.careers") %>
             <% end %>
           </li>
           <li>
-            <%= link_to do %>
+            <%= link_to posts_path do %>
               <%= image_tag 'icon-9.png' %><%= t("navbar.news") %>
             <% end %>
           </li>
