--- a/app/assets/stylesheets/pages/_inks_and_consumables.scss
+++ b/app/assets/stylesheets/pages/_inks_and_consumables.scss
@@ -95,7 +95,7 @@
   display: flex;
   justify-content: center;
   position: relative;
-  z-index: 3
+  z-index: 4;
 }
 
 .inks-card {
@@ -103,7 +103,7 @@
   // height: 300px;
   max-width: 400px;
   border: 3px solid #fafafa;
-  box-shadow: 0px 8px 10px rgba(149, 156, 169, 0.20), -1px -1px 10px rgba(156, 173, 198, 0.20);
+  box-shadow: 0px 15px 40px rgba(0,0,0,0.1);
   border-radius: 10px;
   position: relative;
   z-index: 4;
@@ -129,7 +129,9 @@
 }
 
 .inks-dots {
-  width: 40px;
+  width: 200px;
+  position: relative;
+  left: -70px;
 }
 
 .inks-dots-mobile {
