--- a/app/assets/stylesheets/pages/_software.scss
+++ b/app/assets/stylesheets/pages/_software.scss
@@ -241,9 +241,12 @@
 }
 
 .software-fourth-section-graphics {
-  width: 50%;
-  padding: 16px;
+  width: 45%;
+  margin: 16px auto;
   position: relative;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.3);
+  border-radius: 5px;
+  z-index: 1;
   @include for-phone-only {
     width: 100%;
     border-radius: 25px;
@@ -258,10 +261,10 @@
 }
 
 .software-grey-dots {
-  width: 60px;
+  width: 180px;
   position: absolute;
   bottom: -60px;
-  left: 170px;
+  left: -10px;
 }
 
 .software-button {
@@ -359,7 +362,8 @@
 }
 
 .graphic-shadow {
-  box-shadow: 0 0 25px rgba(0,0,0,0.1);
+  box-shadow: 0 15px 40px rgba(0,0,0,0.1);
+  border-radius: 5px
 }
 
 
