--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -132,7 +132,7 @@
     <div class="container">
       <div class="about-section fxone-section d-flex justify-content-center">
         <div class="fxone-fifth-section-content">
-          <%= image_tag 'about-dots.png', class: 'fxone-dots-back hide-mobile' %>
+          <%= image_tag 'square-dots.png', class: 'fxone-dots-back hide-mobile' %>
           <div class="fxone-fifth-section-left">
             <p class="bold small-text"><%= t("fxone_remote.fifth_section_left_title") %></p>
             <ul style="padding-left: 16px;">
