inks page improved responsive

--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -408,6 +408,12 @@
   }
 }
 
+.hide-small {
+  @include for-small-devices-down {
+    display: none !important;
+  }
+}
+
 .hide-mobile {
   @include for-phone-only {
     display: none !important;
