--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
   padding: 150px 50px;
 
   @include for-medium-devices-down {
