--- a/app/views/pages/inks_and_consumables.html.erb
+++ b/app/views/pages/inks_and_consumables.html.erb
@@ -19,7 +19,7 @@
           </div>
         </div>
         <div class="inks-first-section-right">
-          <%= image_tag 'square-dots.png', class: 'inks-dots hide-mobile' %>
+          <%= image_tag 'square-dots.png', class: 'inks-dots hide-small' %>
           <div class="inks-card pb-3" style="margin: 0 auto 0 0">
             <%= image_tag 'inks-card-icon-2.png', class: 'about-icon square-card-icon' %>
             <p class="inks-card-header px-3"><%= t("inks_and_consumables.second_card_title") %></p>
