--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -22,13 +22,13 @@
 
 .navbar-title {
   color: #051B28;
-  font-size: 14px;
+  font-size: 1.3rem;
 }
 
 .navbar-lang-link {
   display: inline-block;
   color: #051B28;
-  font-size: 14px;
+  font-size: 1.3rem;
   background: rgba(255, 255, 255, 0.3);
   padding: 10px 15px;
   border-radius: 5px;
@@ -66,7 +66,7 @@
 }
 
 .small-chevron {
-  font-size: 8px;
+  font-size: 0.7rem;
 }
 
 .navbar-item {
