testing dyunamic meta data

--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -1,3 +1,7 @@
+<% content_for :meta_title, "FX ONE #{t('fxone_standard.first_section_title')}" %>
+<% content_for :meta_description, "FX ONE #{t('fxone_standard.first_section_text')}" %>
+<% content_for :meta_image, cl_image_path("fxone-standard-graphic-1_wieclv.png", width: 400) %>
+
 <div class="fxone-wrapper fxone-standard">
   <div class="first-section fxone-first-section-background">
     <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "fxone-big-pill fxone-standard-big-pill show-mobile") %>
